Enhance GitHub Actions workflow for Ionic app deployment with improved error handling and environment variable management

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,22 @@
 name: Deploy Ionic App to GitHub Pages
 
+# Trigger on push to main branch or manual workflow dispatch
 on:
   push:
     branches: ["main"]
   workflow_dispatch:
 
+# Required permissions for GitHub Pages deployment
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Environment variables used across the workflow
+env:
+  NODE_VERSION: '18'
+
+# Prevent concurrent deployments
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -21,40 +28,58 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      # Setup phase
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Extract just the repo name from owner/repo
       - name: Extract repository name
         run: echo "REPO_NAME=${GITHUB_REPOSITORY##*/}" >> $GITHUB_ENV
-      # Find the Ionic app directory by searching for ionic.config.json
-      - name: Find Ionic project directory
+
+      - name: Detect Ionic project directory
         id: find-ionic
         run: |
           APP_PATH=$(find . -type f -name ionic.config.json -exec dirname {} \; | head -n 1)
           if [ -z "$APP_PATH" ]; then
-            # If not found, assume the root directory is the app directory
+            echo "No ionic.config.json found, using root directory"
             APP_PATH="."
           fi
+          # Validate that necessary files exist
+          if [ ! -f "$APP_PATH/package.json" ]; then
+            echo "Error: package.json not found in $APP_PATH"
+            exit 1
+          fi
           echo "APP_PATH=$APP_PATH" >> $GITHUB_ENV
-      - name: Set up Node
+
+      # Dependencies installation phase
+      - name: Setup Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+          cache-dependency-path: '${{ env.APP_PATH }}/package-lock.json'
 
-      - name: Install Dependencies
-        run: |
-          cd $APP_PATH
-          npm install
+      - name: Install dependencies
+        working-directory: ${{ env.APP_PATH }}
+        run: npm ci
+
       - name: Install Ionic CLI
         run: npm install -g @ionic/cli
 
-      - name: Build the Ionic App
+      # Build phase
+      - name: Build Ionic application
+        working-directory: ${{ env.APP_PATH }}
+        run: ionic build -- --base-href /${{ env.REPO_NAME }}/
+
+      # Validation phase
+      - name: Verify build output
         run: |
-          cd $APP_PATH
-          # Use the dynamically extracted repository name for the baseHref
-          ionic build -- --base-href /${{ env.REPO_NAME }}/
-      - name: Setup Pages
+          if [ ! -d "${{ env.APP_PATH }}/www" ]; then
+            echo "Error: Build output directory not found"
+            exit 1
+          fi
+
+      # Deployment phase
+      - name: Setup GitHub Pages
         uses: actions/configure-pages@v5
         with:
           enablement: pages
