Enhance GitHub Actions workflow for Ionic app deployment with improved caching, error handling, and routing setup for GitHub Pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,95 +1,122 @@
 name: Deploy Ionic App to GitHub Pages
 
-# Trigger on push to main branch or manual workflow dispatch
+# Workflow Triggers
 on:
   push:
     branches: ["main"]
     paths-ignore:
+      # Prevent deployment on documentation changes
       - '**/*.md'
       - '**/*.MD'
       - 'docs/**'
       - 'LICENSE'
       - '.gitignore'
-  workflow_dispatch:
+  workflow_dispatch:  # Allow manual trigger
 
-# Required permissions for GitHub Pages deployment
+# Required permissions for GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Environment variables used across the workflow
+# Global environment variables
 env:
-  NODE_VERSION: '18'
-  # Add configuration for handling different Angular configurations
-  ANGULAR_CONFIG: 'production'
+  NODE_VERSION: '18'  # Node.js version
+  ANGULAR_CONFIG: 'production'  # Build configuration
+  CACHE_KEY_PREFIX: 'ionic-gh-pages'  # Cache key prefix for better cache management
 
 # Prevent concurrent deployments
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true  # Changed to true to prevent queuing of outdated deployments
 
 jobs:
   deploy:
+    name: Build and Deploy
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    timeout-minutes: 15  # Add timeout to prevent hanging workflows
+
     steps:
-      # Setup phase
+      # SETUP PHASE
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1  # Shallow clone for faster checkout
 
-      - name: Extract repository name
-        run: echo "REPO_NAME=${GITHUB_REPOSITORY##*/}" >> $GITHUB_ENV
+      - name: Extract repository and environment info
+        id: env-setup
+        run: |
+          echo "REPO_NAME=${GITHUB_REPOSITORY##*/}" >> $GITHUB_ENV
+          echo "TIMESTAMP=$(date +%Y%m%d_%H%M%S)" >> $GITHUB_ENV
+          echo "Node version: $(node -v)"
+          echo "NPM version: $(npm -v)"
 
       - name: Detect Ionic project directory
         id: find-ionic
         run: |
           APP_PATH=$(find . -type f -name ionic.config.json -exec dirname {} \; | head -n 1)
           if [ -z "$APP_PATH" ]; then
-            echo "No ionic.config.json found, using root directory"
+            echo "⚠️ No ionic.config.json found, using root directory"
             APP_PATH="."
           fi
-          # Validate that necessary files exist
+          # Validate project structure
           if [ ! -f "$APP_PATH/package.json" ]; then
-            echo "Error: package.json not found in $APP_PATH"
+            echo "❌ Error: package.json not found in $APP_PATH"
             exit 1
           fi
           echo "APP_PATH=$APP_PATH" >> $GITHUB_ENV
-          # Also store the absolute path for caching
           echo "PACKAGE_JSON_PATH=$(realpath $APP_PATH/package-lock.json)" >> $GITHUB_ENV
+          echo "📂 Ionic app path: $APP_PATH"
 
-      # Dependencies installation phase
-      - name: Setup Node.js ${{ env.NODE_VERSION }}
+      # DEPENDENCIES PHASE
+      - name: Setup Node.js and NPM cache
         uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
           cache-dependency-path: ${{ env.PACKAGE_JSON_PATH }}
 
+      # Parallel installation of dependencies
       - name: Install dependencies
-        working-directory: ${{ env.APP_PATH }}
-        run: npm ci
+        run: |
+          # Install Ionic CLI globally in parallel with project dependencies
+          npm install -g @ionic/cli &
+          IONIC_PID=$!
+          
+          # Install project dependencies
+          cd ${{ env.APP_PATH }}
+          npm ci --prefer-offline --no-audit
+          
+          # Wait for Ionic CLI installation
+          wait $IONIC_PID
 
-      - name: Install Ionic CLI
-        run: npm install -g @ionic/cli
-
-      # Build phase
+      # BUILD PHASE
       - name: Build Ionic application
         working-directory: ${{ env.APP_PATH }}
         run: |
-          # First build the app
-          ionic build --configuration=$ANGULAR_CONFIG -- --base-href /${{ env.REPO_NAME }}/
+          echo "🏗️ Starting build process..."
+          
+          # Build the app
+          ionic build --configuration=${{ env.ANGULAR_CONFIG }} -- --base-href /${{ env.REPO_NAME }}/ || {
+            echo "❌ Build failed"
+            exit 1
+          }
           
           # Navigate to build output
           cd www
           
-          # Create 404.html from index.html
+          # Setup routing handlers for GitHub Pages
+          echo "⚙️ Setting up GitHub Pages routing..."
+          
+          # Create 404.html and add routing handler
           cp index.html 404.html
           
-          # Add routing handler to 404.html for handling redirects
+          # Add routing handlers
           sed -i '/<head>/a\
+          <!-- GitHub Pages 404 handler -->\
           <script>\
             (function() {\
               var redirect = sessionStorage.redirect;\
@@ -100,8 +127,8 @@ jobs:
             })();\
           </script>' 404.html
           
-          # Add routing handler to index.html for saving route state
           sed -i '/<head>/a\
+          <!-- Route state preservation -->\
           <script>\
             (function() {\
               var l = location.href;\
@@ -110,26 +137,40 @@ jobs:
               }\
             })();\
           </script>' index.html
+          
+          echo "✅ Build completed successfully"
 
-      # Validation phase
+      # VALIDATION PHASE
       - name: Verify build output
         run: |
           if [ ! -d "${{ env.APP_PATH }}/www" ]; then
-            echo "Error: Build output directory not found"
+            echo "❌ Error: Build output directory not found"
             exit 1
           fi
+          echo "📊 Build size: $(du -sh ${{ env.APP_PATH }}/www | cut -f1)"
 
-      # Deployment phase
+      # DEPLOYMENT PHASE
       - name: Setup GitHub Pages
         uses: actions/configure-pages@v5
         with:
           enablement: pages
-
+          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: '${{ env.APP_PATH }}/www'
+          retention-days: 1  # Reduce retention period for artifacts
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        timeout-minutes: 5  # Add timeout for deployment
+
+      - name: Deployment status
+        if: always()
+        run: |
+          if [ "${{ steps.deployment.outcome }}" = "success" ]; then
+            echo "✅ Deployment successful"
+            echo "🌍 Site available at: ${{ steps.deployment.outputs.page_url }}"
+          else
+            echo "❌ Deployment failed"
