--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -67,7 +67,22 @@ jobs:
           echo "PACKAGE_JSON_PATH=$(realpath $APP_PATH/package-lock.json)" >> $GITHUB_ENV
           echo "📂 Ionic app path: $APP_PATH"
 
-      # DEPENDENCIES PHASE
+      - name: Detect Node.js version
+        id: node-version
+        run: |
+          if [ -f "${{ env.APP_PATH }}/.nvmrc" ]; then
+            NODE_VERSION=$(cat "${{ env.APP_PATH }}/.nvmrc" | tr -d '\n')
+          elif [ -f "${{ env.APP_PATH }}/package.json" ]; then
+            NODE_VERSION=$(grep -oP '"node"\s*:\s*"[^"]+"' "${{ env.APP_PATH }}/package.json" | grep -oP '\d+(\.\d+)*' | head -n1)
+            if [ -z "$NODE_VERSION" ]; then
+              NODE_VERSION='18'
+            fi
+          else
+            NODE_VERSION='18'
+          fi
+          echo "NODE_VERSION=${NODE_VERSION}" >> $GITHUB_ENV
+          echo "Using Node.js version: $NODE_VERSION"
+
       - name: Setup Node.js and NPM cache
         uses: actions/setup-node@v3
         with:
@@ -75,19 +90,11 @@ jobs:
           cache: 'npm'
           cache-dependency-path: ${{ env.PACKAGE_JSON_PATH }}
 
-      # Parallel installation of dependencies
+      # DEPENDENCIES PHASE
       - name: Install dependencies
         run: |
-          # Install Ionic CLI globally in parallel with project dependencies
-          npm install -g @ionic/cli &
-          IONIC_PID=$!
-          
-          # Install project dependencies
           cd ${{ env.APP_PATH }}
           npm ci --prefer-offline --no-audit
-          
-          # Wait for Ionic CLI installation
-          wait $IONIC_PID
 
       # BUILD PHASE
       - name: Build Ionic application
@@ -95,13 +102,16 @@ jobs:
         run: |
           echo "🏗️ Starting build process..."
           
-          # Build the app
-          ionic build --configuration=${{ env.ANGULAR_CONFIG }} -- --base-href /${{ env.REPO_NAME }}/ || {
+          # Output versions
+          echo "Node.js version: $(node -v)"
+          echo "NPM version: $(npm -v)"
+          echo "Ionic CLI version: $(npx ionic --version || echo 'Not installed')"
+          
+          # Build the app using npx
+          npx ionic build --configuration=${{ env.ANGULAR_CONFIG }} -- --base-href /${{ env.REPO_NAME }}/ || {
             echo "❌ Build failed"
             exit 1
           }
-          
-          # Navigate to build output
           cd www
           
           # Setup routing handlers for GitHub Pages
@@ -175,4 +185,3 @@ jobs:
             echo "❌ Deployment failed"
             echo "Deployment outcome: $DEPLOY_OUTCOME"
             exit 1
-          fi
