--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -177,11 +177,13 @@ jobs:
       - name: Deployment status
         if: always()
         shell: bash
+        env:
+          DEPLOY_URL: ${{ steps.deployment.outputs.page_url }}
         run: |
           DEPLOY_OUTCOME="${{ steps.deployment.outcome }}"
           if [[ "$DEPLOY_OUTCOME" == "success" ]]; then
             echo "✅ Deployment successful"
-            echo "🌍 Site available at: ${{ steps.deployment.outputs.page_url }}"
+            echo "🌍 Site available at: $DEPLOY_URL"
             exit 0
           elif [[ "$DEPLOY_OUTCOME" == "skipped" ]]; then
             echo "⚠️ Deployment skipped"
