Refactor GitHub Actions workflow to enhance deployment process and remove redundant steps

--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -1,5 +1,4 @@
 name: Deploy Ionic App to GitHub Pages
-
 # Workflow Triggers
 on:
   push:
@@ -8,24 +7,20 @@ on:
       - 'LICENSE'
       - '.gitignore'
   workflow_dispatch:  # Allow manual trigger
-
 # Required permissions for GitHub Pages
 permissions:
   contents: write      # Allow writing files
   pages: write
   id-token: write
-
 # Global environment variables
 env:
   NODE_VERSION: '18'  # Node.js version
   ANGULAR_CONFIG: 'production'  # Build configuration
   CACHE_KEY_PREFIX: 'ionic-gh-pages'  # Cache key prefix for better cache management
-
 # Prevent concurrent deployments
 concurrency:
   group: "pages"
   cancel-in-progress: true  # Changed to true to prevent queuing of outdated deployments
-
 jobs:
   deploy:
     name: Build and Deploy
@@ -34,14 +29,12 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-22.04  # Explicitly set Ubuntu version
     timeout-minutes: 15  # Add timeout to prevent hanging workflows
-
     steps:
       # SETUP PHASE
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 1  # Shallow clone for faster checkout
-
       - name: Extract repository and environment info
         id: env-setup
         run: |
@@ -65,50 +58,26 @@ jobs:
           echo "APP_PATH=$APP_PATH" >> $GITHUB_ENV
           echo "PACKAGE_JSON_PATH=$(realpath $APP_PATH/package-lock.json)" >> $GITHUB_ENV
           echo "📂 Ionic app path: $APP_PATH"
-
-      - name: Detect Node.js version
-        id: node-version
-        run: |
-          if [ -f "${{ env.APP_PATH }}/.nvmrc" ]; then
-            NODE_VERSION=$(cat "${{ env.APP_PATH }}/.nvmrc" | tr -d '\n')
-          elif [ -f "${{ env.APP_PATH }}/package.json" ]; then
-            NODE_VERSION=$(grep -oP '"node"\s*:\s*"[^"]+"' "${{ env.APP_PATH }}/package.json" | grep -oP '\d+(\.\d+)*' | head -n1)
-            if [ -z "$NODE_VERSION" ]; then
-              NODE_VERSION='18'
-            fi
-          else
-            NODE_VERSION='18'
-          fi
-          echo "NODE_VERSION=${NODE_VERSION}" >> $GITHUB_ENV
-          echo "Using Node.js version: $NODE_VERSION"
       - name: Setup Node.js and NPM cache
         uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
           cache-dependency-path: ${{ env.PACKAGE_JSON_PATH }}
-
       # DEPENDENCIES PHASE
       - name: Install dependencies
         run: |
-
+          cd ${{ env.APP_PATH }}
+          npm ci --prefer-offline --no-audit
       # BUILD PHASE
       - name: Build Ionic application
         working-directory: ${{ env.APP_PATH }}
         run: |
           echo "🏗️ Starting build process..."
-          
-          # Output versions
-          echo "Node.js version: $(node -v)"
-          echo "NPM version: $(npm -v)"
-          echo "Ionic CLI version: $(npx ionic --version || echo 'Not installed')"
-          
-          # Build the app using npx
           npx ionic build --configuration=${{ env.ANGULAR_CONFIG }} -- --base-href /${{ env.REPO_NAME }}/ || {
             echo "❌ Build failed"
             exit 1
           }
-
           cd www
           
           # Setup routing handlers for GitHub Pages
@@ -155,18 +124,16 @@ jobs:
         uses: actions/configure-pages@v5
         with:
           enablement: pages
-
+          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3  # Revert to v3 as v4 is not available
         with:
           path: '${{ env.APP_PATH }}/www'
           retention-days: 1  # Reduce retention period for artifacts
-
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
         timeout-minutes: 5  # Add timeout for deployment
-
       - name: Deployment status
         if: always()
         shell: bash
