Update GitHub Actions workflow to ignore README.md changes during deployment

--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -7,9 +7,10 @@ on:
     paths-ignore:
       - 'LICENSE'
       - '.gitignore'
+      - 'README.md'
   workflow_dispatch:  # Allow manual trigger
 
-# Required permissions for GitHub Pages
+# Rest of the workflow remains exactly the same...
 permissions:
   contents: write      # Allow writing files
   pages: write
