Refactor GitHub Actions workflow to improve deployment success messaging with clearer output and enhanced notification format

--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -215,7 +215,8 @@ jobs:
         shell: bash
         run: |
           if [[ "${{ steps.deploy.outcome }}" == "success" ]]; then
-            echo "✓ Site available at: ${{ steps.deploy.outputs.page_url }}"
+            echo "✓ Deployment successful"
+            echo "::notice title=Deployed Site::${{ steps.deploy.outputs.page_url }}"
           else
             echo "::error::Deployment failed"
             exit 1
